<resources>
    <string name="app_name">Osvit BlogSpot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="register">Registriraj se</string>
    <string name="not_registered">Not registered? Try Ghost mode!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="required">Required</string>
    <string name="retype_password">Retype password</string>
    <string name="nick">Nick</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="password_different">Passwords dont match</string>
    <string name="news">News</string>
    <string name="my_news">My News</string>
    <string name="create_post">Create post</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
</resources>
