<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/fragment_container"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="0dp">

        <EditText
            android:id="@id/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@id/password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="10dp"
            android:id="@id/login"
            android:padding="10dp"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@id/privacy_policy"
        android:text="@string/privacy_policy"
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
