<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/osvit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center"
        android:textSize="25dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:layout_marginTop="10dp"
            android:id="@id/login"
            android:layout_weight="1"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@id/register"
            android:layout_weight="1"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@id/skip_login"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered" />

</LinearLayout>
